--- a/Css/styles.css
+++ b/Css/styles.css
@@ -31,6 +31,13 @@ body {
     display: flex;
 }
 
+.inactivo {
+    display: none;
+}
+
+.activo {
+    display: block;
+}
 
 /* ESTILOS AL ASIDE */
 aside {
@@ -125,12 +132,14 @@ main {
     flex-wrap: nowrap;
     width: 900px;
     transition: transform 3.0s ease-in-out;
+    cursor: pointer;
 }
 
 .contenedor-atras {
     display: flex;
     align-items: center;
     margin: 0 10px;
+    cursor: pointer;
   }
 
 .atras {
@@ -141,6 +150,7 @@ main {
     display: flex;
     align-items: center;
     margin: 0 10px;
+    cursor: pointer;
 }
 
 .siguiente {
@@ -173,3 +183,84 @@ main {
     text-align: center;
     color: var(--blanco-secundario);
 }
+
+.contenedor-lista-reproduccion{
+    display: flex;
+    width: 100%;
+    border: none;
+    border: 0.5px solid var(--oscuro-ligero);
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contenedor-lista-reproduccion:hover {
+    background-color: rgba(255, 255, 255, 0.1); 
+}
+
+.contenedor-descripcion {
+    width: 800px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.contenedor-imagen {
+    width: 200px;
+    height: 200px;
+    margin: 60px 0 20px 60px;
+}
+
+.imagen-genero {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
+}
+
+.descripciones {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 90px 0 20px 20px;
+}
+
+.icono-play {
+    margin-left: 10px;
+}
+
+.lista {
+    font-size: 1.1rem;
+    color:var(--blanco-secundario);
+}
+
+.tipo-musica {
+    color: var(--blanco);
+}
+
+.descripcion-genero {
+    font-size: 1.1rem;
+    color: var(--blanco);
+}
+
+.nombre-cancion {
+    font-size: 1.5rem;
+    padding: 16px;
+    color: var(--blanco);
+}
+
+.nombre-artista {
+    font-size: 1.5rem;
+    padding: 16px;
+    color: var(--blanco);
+}
+
+.duracion {
+    font-size: 1.5rem;
+    padding: 16px;
+    color: var(--blanco);
+}
+
+
+
+
+
+
+
